[gd_scene load_steps=3 format=3 uid="uid://didpmhvfjpihp"]

[ext_resource type="Script" uid="uid://dhog4vwtinckh" path="res://scenes/gui/popup_windows/pu_add_map.gd" id="1_tf34y"]
[ext_resource type="StyleBox" uid="uid://byni8x36qkwsd" path="res://resources/darker_panel.tres" id="2_72ybi"]

[node name="add_map" type="Window"]
title = "Add Map"
initial_position = 2
size = Vector2i(450, 400)
script = ExtResource("1_tf34y")

[node name="Panel" type="Panel" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = ExtResource("2_72ybi")

[node name="PanelContainer" type="PanelContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2

[node name="tabs" type="TabContainer" parent="PanelContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
current_tab = 0
tabs_visible = false

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/VBoxContainer/tabs"]
layout_mode = 2
metadata/_tab_index = 0

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/VBoxContainer/tabs/VBoxContainer"]
layout_mode = 2

[node name="lb_header" type="Label" parent="PanelContainer/VBoxContainer/tabs/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Available Maps"

[node name="cbt_hide_excluded" type="CheckButton" parent="PanelContainer/VBoxContainer/tabs/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = "Hide all the maps that are currently excluded from the pk4"
button_pressed = true
text = "Hide Excluded"

[node name="ScrollContainer" type="ScrollContainer" parent="PanelContainer/VBoxContainer/tabs/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3

[node name="tr_maps" type="Tree" parent="PanelContainer/VBoxContainer/tabs/VBoxContainer/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
focus_neighbor_left = NodePath(".")
focus_neighbor_top = NodePath(".")
focus_neighbor_right = NodePath(".")
focus_neighbor_bottom = NodePath(".")
hide_root = true
auto_tooltip = false

[node name="lb_warnings" type="Label" parent="PanelContainer/VBoxContainer/tabs/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "some warning text"

[node name="button_bar" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="btn_apply" type="Button" parent="PanelContainer/VBoxContainer/button_bar"]
unique_name_in_owner = true
visible = false
layout_mode = 2
size_flags_horizontal = 6
disabled = true
text = "Apply"

[node name="btn_ok" type="Button" parent="PanelContainer/VBoxContainer/button_bar"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 6
text = "Open"

[node name="btn_cancel" type="Button" parent="PanelContainer/VBoxContainer/button_bar"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 6
text = "Cancel"

[connection signal="pressed" from="PanelContainer/VBoxContainer/tabs/VBoxContainer/HBoxContainer/cbt_hide_excluded" to="." method="_on_cbt_hide_excluded_pressed"]
[connection signal="cell_selected" from="PanelContainer/VBoxContainer/tabs/VBoxContainer/ScrollContainer/tr_maps" to="." method="_on_tr_maps_cell_selected"]
[connection signal="item_activated" from="PanelContainer/VBoxContainer/tabs/VBoxContainer/ScrollContainer/tr_maps" to="." method="_on_tr_maps_item_activated"]
[connection signal="multi_selected" from="PanelContainer/VBoxContainer/tabs/VBoxContainer/ScrollContainer/tr_maps" to="." method="_on_tr_maps_multi_selected"]
